# django-migrations-formatter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test-deploy.yml  test.yml
django_migrations_formatter/: __init__.py  apps.py
tests/: settings.py  tests.py
