[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6,<7"]

[tool.black]
target-version = ['py38']

[tool.coverage.run]
branch = true
source = ["django_migrations_formatter/"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
combine_as_imports = true
known_first_party = ["django_migrations_formatter", "tests"]
profile = "black"

[tool.setuptools_scm]
